--- a/.github/workflows/flutter_android_build.yml
+++ b/.github/workflows/flutter_android_build.yml
@@ -8,16 +8,17 @@ on:
 
 jobs:
   build-android:
+    name: Build APK
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout code
+      # 1. Checkout repository
       - uses: actions/checkout@v3
 
-      # 2. Install Flutter (latest stable)
+      # 2. Install Flutter
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.13.0'
+          flutter-version: '3.13.0'  # latest stable Flutter version
 
       # 3. Get dependencies
       - run: flutter pub get
@@ -25,12 +26,10 @@ jobs:
       # 4. Clean previous builds
       - run: flutter clean
 
-      # 5. Build APK or AppBundle
+      # 5. Build APK
       - run: flutter build apk --release
-      # Or for Play Store:
-      # - run: flutter build appbundle --release
 
-      # 6. Upload artifact
+      # 6. Upload APK as artifact
       - uses: actions/upload-artifact@v3
         with:
           name: app-release-apk
